<?xml version="1.0" encoding="utf-8"?>
<!-- Menu from the CharactericticsFragment -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_features"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_features"/>
    <item
        android:id="@+id/save"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/save"/>
    <item
        android:id="@+id/define_color"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/define_color"/>
    <item
        android:id="@+id/add_balcony"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_balcony"/>
    <item
        android:id="@+id/number_floors"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/number_floors"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>