<?xml version="1.0" encoding="utf-8"?>
<!-- Menu from the FrontageFragment -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add_frontage"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_frontage"/>
    <item
        android:id="@+id/save"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/save"/>
    <item
        android:id="@+id/divide_frontage"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/divide_frontage"/>
    <item
        android:id="@+id/regroup_frontage"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/regroup_frontage"/>
    <item
        android:id="@+id/delete_frontage"
        android:orderInCategory="50"
        android:showAsAction="never"
        android:title="@string/delete_frontage"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1000"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

</menu>