<?xml version="1.0" encoding="utf-8"?>
<!-- Layout from the InformationFragment -->
<!-- TODO choisir entre 100% relative layout ou linear layout combinés -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
        
        <!-- TODO largeur à définir selon la taille de l'écran -->

        <RelativeLayout
            android:layout_width="63dp"
            android:layout_height="fill_parent" >
            
            <TextView 
                android:id="@+id/infoTextName"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/infoText_name"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>
            
            <TextView 
                android:id="@+id/infoTextAuthor"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/infoText_author"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/infoTextName"/>
            
            <TextView 
                android:id="@+id/infoTextDate"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/infoText_date"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/infoTextAuthor"/>
            
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="170dp"
            android:layout_height="fill_parent" >
            
            <EditText
                android:id="@+id/infoEditName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:hint="@string/infoEdit_name"
                android:inputType="text"/>
            
            <EditText
                android:id="@+id/infoEditAuthor"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/infoEdit_author"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/infoEditName"/>
            
            <EditText
                android:id="@+id/infoEditDate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/infoEdit_date"
                android:inputType="date"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/infoEditAuthor"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="105dp"
            android:layout_height="fill_parent" >
            
            <TextView 
                android:id="@+id/infoTextAdress"
                android:layout_height="35dp"
                android:layout_width="wrap_content"
                android:text="@string/infoText_adress"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"/>
            
            <TextView 
                android:id="@+id/infoVoid"
                android:layout_height="35dp"
                android:layout_width="wrap_content"
                android:text="@string/infoText_void"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/infoTextAdress"/>
            
            <TextView 
                android:id="@+id/infoTextCity"
                android:layout_height="35dp"
                android:layout_width="wrap_content"
                android:text="@string/infoText_city"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/infoVoid"/>
            
            <TextView 
                android:id="@+id/infoTextPostalCode"
                android:layout_height="35dp"
                android:layout_width="wrap_content"
                android:text="@string/infoText_postalCode"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/infoTextCity"/>
            
            <TextView 
                android:id="@+id/infoTextCountry"
                android:layout_height="35dp"
                android:layout_width="wrap_content"
                android:text="@string/infoText_country"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/infoTextPostalCode"/>
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >
            
            <EditText
                android:id="@+id/infoEditAdress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/infoEdit_adress"
                android:inputType="text"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"/>
            <EditText
                android:id="@+id/infoEditAdressComplement"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/infoEdit_complement"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/infoEditAdress"/>
            
            <EditText
                android:id="@+id/infoEditCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/infoEdit_city"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/infoEditAdressComplement"/>
            
            <EditText
                android:id="@+id/infoEditPostalCode"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/infoEdit_postalCode"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/infoEditCity"/>
            
            <EditText
                android:id="@+id/infoEditCountry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/infoEdit_country"
                android:inputType="text"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/infoEditPostalCode"/>
            
            <Button 
                android:id="@+id/buttonGeo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoButton_geo"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/infoEditCountry"/>
        </RelativeLayout>
</LinearLayout>
