<?xml version="1.0" encoding="utf-8"?>
<!-- 
/**
 * @author	COHENDET Sébastien
 * 			DAVID Nicolas
 * 			GUILBART Gabriel
 * 			PALOMINOS Sylvain
 * 			PARTY Jules
 * 			RAMBEAU Merwan
 * 
 * home layout
 * 
 * This layout is used in the home fragment. The sizes will be be defined by the java code.
 * 			
 */
 -->

<!-- Load image action -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <RelativeLayout
            android:id="@+id/home_layout_newProject"
            android:layout_width="170dp"
            android:layout_height="wrap_content">
                
                <ImageView
                android:id="@+id/home_image_newProject"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/image_newProject"
        		android:src="@drawable/image"/>
            
            <Button
                android:id="@+id/home_takePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_image_newProject"
                android:layout_alignParentLeft="true"
                android:text="@string/takePicture"/>
            
            <Button
                android:id="@+id/home_loadPicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_takePicture"
                android:layout_alignParentLeft="true"
                android:text="@string/loadPicture"/>
            
            <Button
                android:id="@+id/home_savePicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_loadPicture"
                android:layout_alignParentLeft="true"
                android:text="@string/image_save"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/home_layout_localProject"
            android:layout_width="170dp"
            android:layout_height="wrap_content">
            
         <ImageView
         android:id="@+id/home_image_loadLocalProject"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/image_loadLocalProject"
         android:src="@drawable/image"/>
        
         <Button
         android:id="@+id/home_loadLocalProject"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/home_image_loadLocalProject"
         android:layout_alignParentLeft="true"
         android:text="@string/loadLocalProject"/>
         
         <Button
         android:id="@+id/home_test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/home_loadLocalProject"
         android:layout_alignParentLeft="true"
         android:text="test"/>
         
                  <Button
         android:id="@+id/home_test_photo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/home_test"
         android:layout_alignParentLeft="true"
         android:text="test photo"/>
            
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/home_layout_distantProject"
            android:layout_width="170dp"
            android:layout_height="wrap_content">
         
                 <ImageView
                 android:id="@+id/home_image_loadDistantProject"
                 android:layout_width="wrap_content"
         		 android:layout_height="50dp"
                 android:layout_alignParentTop="true"
                 android:contentDescription="@string/image_loadDistantProject"/>
                
                 <Button
                 android:id="@+id/home_loadDistantlProject"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/home_image_loadDistantProject"
                 android:layout_alignParentLeft="true"
                 android:text="@string/loadDistantlProject"/>

    </RelativeLayout>
    
</LinearLayout>