<?xml version="1.0" encoding="utf-8"?>
<!-- Main layout with the different commun element such as save an parameter button, logo ... -->
<!-- TODO taille des boutons, logos, marges, etc non spécifier. Taille différente en cas d'usage sur tablette et smartphone ?
=> définition dynamiquedans le code -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Logo, save andparam layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_toRightOf="@+id/imageLogo" />

        <Button
            android:id="@+id/buttonParam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/param" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/buttonParam"
            android:text="@string/save" />

    </RelativeLayout>

    <!-- Menu bar where the diferents fragments will be included -->
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </LinearLayout>
</LinearLayout>